--- a/index.html
+++ b/index.html
@@ -85,8 +85,12 @@ ENUNCIADO:
               />
               <input type="submit" value="enviar comando" />
             </form>
-            <p>rejistro de comandos:</p>
-            <div id="comandos"></div>
+            <details>
+              <summary>registro:</summary>
+              <div id="comandos"></div>
+            </details>
+            
+            
           </div>
         </div>
       </div>
