--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ ENUNCIADO:
             </form>
             <details>
               <summary>registro:</summary>
-              <div id="comandos"></div>
+              <p id="comandos"></p>
             </details>
             
             
