--- a/index.html
+++ b/index.html
@@ -97,4 +97,22 @@ ENUNCIADO:
      
     </div>
   </body>
+  <script>
+    document.getElementById("0").oncontextmenu = function(event){
+  event.preventDefault();
+  click_quitar_cliente("0");
+};
+document.getElementById("1").oncontextmenu = function(event){
+  event.preventDefault();
+  click_quitar_cliente("1");
+};
+document.getElementById("2").oncontextmenu = function(event){
+  event.preventDefault();
+  click_quitar_cliente("2");
+};
+document.getElementById("3").oncontextmenu = function(event){
+  event.preventDefault();
+  click_quitar_cliente("3");
+};
+  </script>
 </html>
