--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@ ENUNCIADO:
         >
           Dia/noche
         </button>
+
+        <button
+        type="button">
+        <a href="https://joseluisgm.github.io/Supermercado_jlgm/instalacion%20y%20configuracion%20de%20xampp(despliege).pdf">documentos</a>
+      </button>
+
       </div>
       <div class="flex-container">
         <div id="zonacajas">
